# SLEP

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
src/data-collection-backend/: .gitignore  CLAUDE.md  Dockerfile  Makefile  main.py  pyproject.toml  weather.py
src/data-collection-backend/alembic/: env.py
src/data-collection-backend/alembic/versions/: 0fd90774e0c2_init.py  18262409b442_all_models.py  d7fc5b6f454e_dataset_and_jobs.py
src/data-collection-backend/app/: dependencies.py  main.py
src/data-collection-backend/app/api/v1/: gesture_class.py  gesture_type.py  video.py
src/data-collection-backend/app/api/v1/datasets/: __init__.py  router.py  schemas.py
src/data-collection-backend/app/core/: config.py
src/data-collection-backend/app/crud/: dataset.py  export_dataset_job.py  exported_dataset.py  gesture_class.py  gesture_type.py  import_video_job.py  video.py
src/data-collection-backend/app/db/: database.py
src/data-collection-backend/app/models/: __init__.py  clip.py  dataset.py  export_dataset_job.py  exported_dataset.py  gesture_class.py  gesture_type.py  import_video_job.py  landmarks.py  video.py
src/data-collection-backend/app/schemas/: clip.py  dataset.py  export_dataset_job.py  exported_dataset.py  gesture_class.py  gesture_type.py  import_video_job.py  landmark.py  video.py
src/data-collection-backend/app/services/: landmark_extraction.py  s3.py  video.py
src/data-collection-backend/app/workers/: celery_app.py  tasks.py
src/data-collection-backend/tests/: test_s3_presigned_urls.sh
(+33 files in other folders)
