[project]
name = "data-collection-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "boto3>=1.42.91",
    "celery[redis]>=5.6.3",
    "fastapi>=0.128.8",
    "flower>=2.0.1",
    "imageio[ffmpeg]>=2.37.3",
    "mediapipe>=0.10.33",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.40.0",
]
[tool.pytest.ini_options]
pythonpath = "."
